<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_new_home_image"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/menu_order" />

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_new_favourite_image"
        android:title="@string/menu_favourite" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_new_chat_image"
        android:title="@string/menu_chat" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_new_user"
        android:title="@string/menu_profile" />

</menu>
