<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.notification_settings.NotificationSettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/back_btn_verify"
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/arrow_left_black_24"
                app:tint="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_36dp"
                android:layout_weight="1"
                android:fontFamily="@font/manrope_semi_bold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/notifications"
                android:textSize="@dimen/_20sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_24dp"
            android:layout_marginVertical="@dimen/_16dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/allNotificationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_notifications"
                android:fontFamily="@font/manrope_medium"
                android:textSize="@dimen/_14sp"
                android:theme="@style/SwitchStyle"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/pushNotificationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_notifications"
                android:layout_marginTop="@dimen/_16dp"
                android:fontFamily="@font/manrope_medium"
                android:textSize="@dimen/_14sp"
                android:theme="@style/SwitchStyle"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/promotionAndOfferSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/promotions_and_offers"
                android:layout_marginTop="@dimen/_16dp"
                android:fontFamily="@font/manrope_medium"
                android:textSize="@dimen/_14sp"
                android:theme="@style/SwitchStyle"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>