<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_semi_bold"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/inputsWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/phone_number"
                    android:textSize="@dimen/_12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phonenumbertil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextFieldTheme"
                    app:expandedHintEnabled="false"
                    app:hintEnabled="false"
                    app:hintTextColor="@color/aayo_gray"
                    app:prefixText="+977 "
                    app:prefixTextColor="@color/aayo_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_edittext_background"
                        android:fontFamily="@font/manrope_regular"
                        android:inputType="phone"
                        android:textColor="@color/aayo_gray"
                        android:textColorHint="@color/aayo_gray"
                        android:textSize="@dimen/_14sp" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_8dp"
                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/password"
                    android:textSize="@dimen/_12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordtil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextFieldTheme"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/aayo_gray">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/countrycode"
                        android:background="@drawable/round_edittext_background"
                        android:fontFamily="@font/manrope_regular"
                        android:inputType="textPassword"
                        android:textColor="@color/aayo_gray"
                        android:textColorHint="@color/aayo_gray"
                        android:textSize="@dimen/_14sp" />


                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lupapass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_24dp"
                    android:fontFamily="@font/manrope_semi_bold"
                    android:gravity="center"
                    android:text="@string/lupa"
                    android:textColor="@color/aayo_red"
                    android:textSize="@dimen/_14sp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonlogin"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginBottom="@dimen/_32dp"
                android:background="@drawable/rectangle_red_8dp"
                android:fontFamily="@font/manrope_medium"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp"
                app:backgroundTint="@null"
                android:layout_marginTop="@dimen/_16dp"
                app:layout_constraintBottom_toTopOf="@+id/social_wrapper"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputsWrapper"
                app:layout_constraintVertical_bias="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"/>

            <LinearLayout
                android:id="@+id/social_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/terms_wrapper"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="22dp"
                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/or_continue_with"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:id="@+id/cv_facebook"
                        android:layout_width="@dimen/_40dp"
                        android:layout_height="@dimen/_40dp"
                        android:layout_marginEnd="@dimen/_8dp"
                        android:src="@drawable/facebook_rounded_logo" />

                    <ImageView
                        android:id="@+id/cv_google"
                        android:layout_width="@dimen/_40dp"
                        android:layout_height="@dimen/_40dp"
                        android:layout_marginStart="@dimen/_8dp"
                        android:src="@drawable/google_rounded_logo" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/terms_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_64dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/sign_up_wrapper"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/by_signing"
                        android:textColor="@color/aayo_text_gray"
                        android:textSize="@dimen/_14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_2dp"
                        android:fontFamily="@font/manrope_medium"
                        android:text="@string/terms_and"
                        android:textColor="@color/aayo_red"
                        android:textSize="@dimen/_14sp" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_2dp"
                    android:fontFamily="@font/manrope_medium"
                    android:text="@string/conditions"
                    android:textColor="@color/aayo_red"
                    android:textSize="@dimen/_14sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/sign_up_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12dp"
                app:layout_goneMarginBottom="@dimen/_12dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:clipToPadding="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_regular"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/aayo_text_gray"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_2dp"
                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/sign_up"
                    android:textColor="@color/aayo_red"
                    android:textSize="@dimen/_14sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>