<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12dp"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/_16dp"
    tools:context=".fragment.HistoryFilterBottomSheet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp">

        <LinearLayout
            android:id="@+id/wrapper_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal|center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/filter"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="@dimen/_12dp"
                android:layout_height="@dimen/_12dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/close" />

        </LinearLayout>


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_12dp"
            android:background="@color/gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrapper_one" />


        <TextView
            android:id="@+id/completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/rectangle_grey_border_16"
            android:fontFamily="@font/manrope_medium"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/_12dp"
            android:paddingVertical="@dimen/_8dp"
            android:text="@string/completed"
            android:textColor="@color/aayo_text_gray"
            android:textSize="@dimen/_14sp"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_12dp"/>



        <TextView
            android:id="@+id/cancelled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/rectangle_grey_border_16"
            android:fontFamily="@font/manrope_medium"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/_12dp"
            android:paddingVertical="@dimen/_8dp"
            android:text="@string/cancelled"
            android:textColor="@color/aayo_text_gray"
            android:textSize="@dimen/_14sp"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintLeft_toRightOf="@id/completed"
            app:layout_constraintRight_toLeftOf="@id/rejected"
            android:layout_marginTop="@dimen/_12dp"/>



        <TextView
            android:id="@+id/rejected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/rectangle_grey_border_16"
            android:fontFamily="@font/manrope_medium"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/_12dp"
            android:paddingVertical="@dimen/_8dp"
            android:text="@string/rejected"
            android:textColor="@color/aayo_text_gray"
            android:textSize="@dimen/_14sp"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_12dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

